<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:baselineAligned="false"
    android:orientation="vertical"
    tools:context=".TopActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal">
       	<LinearLayout
	        android:layout_width="0dp"
	        android:layout_height="fill_parent"
	        android:layout_weight="1"
	        android:gravity="center">
	        <Button android:id="@+id/button1"
		        android:layout_width="100dp"
		        android:layout_height="100dp"
		        android:text="@string/kamakura" />
   		</LinearLayout>
   		<LinearLayout
	        android:layout_width="0dp"
	        android:layout_height="fill_parent"
	        android:layout_weight="1"
	        android:gravity="center">
	        <Button android:id="@+id/button2"
		        android:layout_width="100dp"
		        android:layout_height="100dp"
		        android:text="@string/kugenuma" />
   		</LinearLayout>
    </LinearLayout>
  	    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal">
   		<LinearLayout
	        android:layout_width="0dp"
	        android:layout_height="fill_parent"
	        android:layout_weight="1"
	        android:gravity="center">
	        <Button android:id="@+id/button3"
		        android:layout_width="100dp"
		        android:layout_height="100dp"
		        android:text="@string/tsujido" />
   		</LinearLayout>
   		<LinearLayout
	        android:layout_width="0dp"
	        android:layout_height="fill_parent"
	        android:layout_weight="1"
	        android:gravity="center">
	        <Button android:id="@+id/button4"
		        android:layout_width="100dp"
		        android:layout_height="100dp"
		        android:text="@string/chigasaki" />
   		</LinearLayout>
    </LinearLayout>
  	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal">
   		<LinearLayout
	        android:layout_width="0dp"
	        android:layout_height="fill_parent"
	        android:layout_weight="1"
	        android:gravity="center">
	        <Button android:id="@+id/button5"
		        android:layout_width="100dp"
		        android:layout_height="100dp"
		        android:text="@string/hiratsuka" />
   		</LinearLayout>
   		<LinearLayout
	        android:layout_width="0dp"
	        android:layout_height="fill_parent"
	        android:layout_weight="1"
	        android:gravity="center">
	        <Button android:id="@+id/button6"
		        android:layout_width="100dp"
		        android:layout_height="100dp"
		        android:text="@string/oiso" />
   		</LinearLayout>
    </LinearLayout>


</LinearLayout>